fixed the participant content view on mobile device

--- a/themes/best-challenge/sass/_prizes-participants.scss
+++ b/themes/best-challenge/sass/_prizes-participants.scss
@@ -161,6 +161,18 @@
                     font-size: 18px;
                 }
             } 
+            .taxonomy-title-mobile {
+                background: white;
+                background-image: none;
+                h3 {
+                    color: $dark-text;
+                    font-size: 18px;
+                    text-transform: capitalize;
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    text-decoration: underline;
+                }
+            }
         }
     }
     }
